--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^2.0.0-beta.2",
     "react-confetti": "^6.0.1",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-hooks-global-state": "^1.0.1",
     "react-icons": "^4.2.0",
@@ -28,8 +29,8 @@
     "react-slick": "^0.28.1",
     "react-use": "^17.2.4",
     "slick-carousel": "^1.8.1",
-    "sweetalert2": "^11.1.0",
     "styled-components": "^5.3.0",
+    "sweetalert2": "^11.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -39,7 +40,6 @@
     "eject": "craco eject"
   },
   "eslintConfig": {
-    "parser": "babel-eslint",
     "extends": [
       "react-app",
       "react-app/jest"
